--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "lib": "lib/"
   },
   "scripts": {
-    "dev": "webpack serve --mode development --port 3100 --host 0.0.0.0 --progress ",
-    "clear": "rm -rf assets",
-    "build:webpack": "NODE_ENV=production  webpack --mode production --progress && cp -R public/* ./assets/ ",
+    "dev": "webpack serve --mode development --port 3100 --host 10.1.11.36 --progress ",
+    "clear": "rimraf assets",
+    "build:webpack": "cross-env NODE_ENV=production webpack --mode production --progress && cpx \"public/**/*\" ./assets/",
     "build": "npm run clear && npm run build:webpack",
-    "publish:gh-pages": "node gh-pages.js"
+    "publish:gh-pages": "node gh-pages.js",
+    "pro": "serve -s assets" 
   },
   "keywords": [
     "react",
@@ -24,11 +25,11 @@
     "lib",
     "src"
   ],
-  "author": "HYPERS Team",
+  "author": "Michael Hiền",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:rsuite/rsuite-admin-template.git"
+    "url": "git@github.com:thanhhienthach2019/react-app-rsuite-admin.git"
   },
   "dependencies": {
     "@babel/runtime": "^7.18.9",
@@ -74,6 +75,8 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "conventional-changelog-cli": "^2.2.2",
+    "cpx": "^1.5.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.12",
     "eslint": "^7.25.0",
@@ -91,6 +94,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "prettier": "^2.4.1",
+    "rimraf": "^6.0.1",
     "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
