--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rsuite-admin-template",
   "version": "1.0.0",
-  "description": "RSUITE Management System",
+  "description": "Management System",
   "main": "lib/index.js",
   "directories": {
     "lib": "lib/"
@@ -12,7 +12,7 @@
     "build:webpack": "cross-env NODE_ENV=production webpack --mode production --progress && cpx \"public/**/*\" ./assets/",
     "build": "npm run clear && npm run build:webpack",
     "publish:gh-pages": "node gh-pages.js",
-    "pro": "serve -s assets" 
+    "pro": "serve -s assets"
   },
   "keywords": [
     "react",
@@ -42,7 +42,9 @@
     "apexcharts": "^3.35.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.2",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
+    "mixpanel-browser": "^2.55.1",
     "prop-types": "^15.6.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
