--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib/"
   },
   "scripts": {
-    "dev": "webpack serve --mode development --port 3100 --host 10.1.11.36 --progress ",
+    "dev": "webpack serve --mode development --port 3100 --host 0.0.0.0 --progress ",
     "clear": "rimraf assets",
     "build:webpack": "cross-env NODE_ENV=production webpack --mode production --progress && cpx \"public/**/*\" ./assets/",
     "build": "npm run clear && npm run build:webpack",
@@ -34,10 +34,12 @@
   "dependencies": {
     "@babel/runtime": "^7.18.9",
     "@faker-js/faker": "^7.4.0",
+    "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@reduxjs/toolkit": "^2.3.0",
     "@rsuite/icons": "^1.0.2",
     "apexcharts": "^3.35.4",
     "classnames": "^2.3.1",
@@ -51,9 +53,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-intl": "^6.0.5",
+    "react-redux": "^9.1.2",
     "react-router": "6.3.0",
     "react-router-dom": "^6.3.0",
-    "rsuite": "5.28.2"
+    "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
+    "redux-action-log": "^2.1.0",
+    "redux-persist": "^6.0.0",
+    "rsuite": "5.28.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -69,11 +77,12 @@
     "@svgr/webpack": "^6.3.1",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
-    "@types/react": "^17.0.0",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "autoprefixer": "^10.4.7",
+    "axios": "^1.7.7",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "conventional-changelog-cli": "^2.2.2",
@@ -89,10 +98,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^1.1.0",
+    "guid-typescript": "^1.0.9",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.4",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "prettier": "^2.4.1",
